Attempting to enable websocket support

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -41,5 +41,11 @@ http {
 			proxy_redirect off;
 			proxy_pass http://app_server;
 		}
-	}
+                
+                location /websocket/ {
+                        proxy_pass http://app_server;
+                        proxy_http_version 1.1;
+                        proxy_set_header Upgrade $http_upgrade;
+                        proxy_set_header Connection "upgrade";
+	        }
 }
