--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -8,6 +8,11 @@ events {
 	worker_connections 1024;
 }
 
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 http {
         gzip on;
         gzip_comp_level 2;
@@ -42,7 +47,7 @@ http {
 			proxy_pass http://app_server;
                         proxy_http_version 1.1;
                         proxy_set_header Upgrade $http_upgrade;
-                        proxy_set_header Connection "upgrade";
+                        proxy_set_header Connection $connection_upgrade; 
 		}
         }
 }
